src/parser/generated/UniStackParser.ts
// @ts-nocheck
// Generated from src/lang/UniStack.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN.js";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer.js";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException.js";
import { NotNull } from "antlr4ts/Decorators.js";
import { NoViableAltException } from "antlr4ts/NoViableAltException.js";
import { Override } from "antlr4ts/Decorators.js";
import { Parser } from "antlr4ts/Parser.js";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext.js";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator.js";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener.js";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor.js";
import { RecognitionException } from "antlr4ts/RecognitionException.js";
import { RuleContext } from "antlr4ts/RuleContext.js";
//import { RuleVersion } from "antlr4ts/RuleVersion.js";
import { TerminalNode } from "antlr4ts/tree/TerminalNode.js";
import { Token } from "antlr4ts/Token.js";
import { TokenStream } from "antlr4ts/TokenStream.js";
import { Vocabulary } from "antlr4ts/Vocabulary.js";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl.js";

import * as Utils from "antlr4ts/misc/Utils.js";

import { UniStackVisitor } from "./UniStackVisitor";


export class UniStackParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly NULL = 44;
	public static readonly STRING = 45;
	public static readonly VERSION = 46;
	public static readonly NUMBER = 47;
	public static readonly BOOLEAN = 48;
	public static readonly IDENT = 49;
	public static readonly DIGIT = 50;
	public static readonly LBRACE = 51;
	public static readonly RBRACE = 52;
	public static readonly LPAREN = 53;
	public static readonly RPAREN = 54;
	public static readonly COMMA = 55;
	public static readonly SEMI = 56;
	public static readonly HTML_TEXT = 57;
	public static readonly CSS_TEXT = 58;
	public static readonly PY_TEXT = 59;
	public static readonly JS_TEXT = 60;
	public static readonly ERROR_TEXT = 61;
	public static readonly STYLE_TEXT = 62;
	public static readonly WHITESPACE = 63;
	public static readonly COMMENT = 64;
	public static readonly RULE_file = 0;
	public static readonly RULE_fileBody = 1;
	public static readonly RULE_fileSection = 2;
	public static readonly RULE_decoratorSection = 3;
	public static readonly RULE_decoratorList = 4;
	public static readonly RULE_decorator = 5;
	public static readonly RULE_decoratorArgs = 6;
	public static readonly RULE_decoratorArg = 7;
	public static readonly RULE_decoratorValue = 8;
	public static readonly RULE_styleSection = 9;
	public static readonly RULE_styleLine = 10;
	public static readonly RULE_importsSection = 11;
	public static readonly RULE_importList = 12;
	public static readonly RULE_importItem = 13;
	public static readonly RULE_importAlias = 14;
	public static readonly RULE_configSection = 15;
	public static readonly RULE_configEntryList = 16;
	public static readonly RULE_configEntry = 17;
	public static readonly RULE_configValue = 18;
	public static readonly RULE_htmlSection = 19;
	public static readonly RULE_htmlBlock = 20;
	public static readonly RULE_htmlNode = 21;
	public static readonly RULE_htmlText = 22;
	public static readonly RULE_htmlExpr = 23;
	public static readonly RULE_htmlConditional = 24;
	public static readonly RULE_condition = 25;
	public static readonly RULE_cssSection = 26;
	public static readonly RULE_cssChunk = 27;
	public static readonly RULE_pySection = 28;
	public static readonly RULE_pyFunction = 29;
	public static readonly RULE_pyDecorator = 30;
	public static readonly RULE_genericParams = 31;
	public static readonly RULE_pyParams = 32;
	public static readonly RULE_pyParam = 33;
	public static readonly RULE_typeAnnotation = 34;
	public static readonly RULE_returnType = 35;
	public static readonly RULE_pyBody = 36;
	public static readonly RULE_jsSection = 37;
	public static readonly RULE_jsFunction = 38;
	public static readonly RULE_jsDecorator = 39;
	public static readonly RULE_asyncKeyword = 40;
	public static readonly RULE_jsParams = 41;
	public static readonly RULE_jsParam = 42;
	public static readonly RULE_jsBody = 43;
	public static readonly RULE_routesSection = 44;
	public static readonly RULE_route = 45;
	public static readonly RULE_httpMethod = 46;
	public static readonly RULE_handler = 47;
	public static readonly RULE_routeBody = 48;
	public static readonly RULE_routeStatement = 49;
	public static readonly RULE_errorHandler = 50;
	public static readonly RULE_errorBody = 51;
	public static readonly RULE_functionCall = 52;
	public static readonly RULE_functionArgs = 53;
	public static readonly RULE_functionArg = 54;
	public static readonly RULE_datasetOp = 55;
	public static readonly RULE_jsonResponse = 56;
	public static readonly RULE_jsonPairs = 57;
	public static readonly RULE_jsonPair = 58;
	public static readonly RULE_jsonValue = 59;
	public static readonly RULE_jsonArray = 60;
	public static readonly RULE_jsonObject = 61;
	public static readonly RULE_langRef = 62;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "fileBody", "fileSection", "decoratorSection", "decoratorList", 
		"decorator", "decoratorArgs", "decoratorArg", "decoratorValue", "styleSection", 
		"styleLine", "importsSection", "importList", "importItem", "importAlias", 
		"configSection", "configEntryList", "configEntry", "configValue", "htmlSection", 
		"htmlBlock", "htmlNode", "htmlText", "htmlExpr", "htmlConditional", "condition", 
		"cssSection", "cssChunk", "pySection", "pyFunction", "pyDecorator", "genericParams", 
		"pyParams", "pyParam", "typeAnnotation", "returnType", "pyBody", "jsSection", 
		"jsFunction", "jsDecorator", "asyncKeyword", "jsParams", "jsParam", "jsBody", 
		"routesSection", "route", "httpMethod", "handler", "routeBody", "routeStatement", 
		"errorHandler", "errorBody", "functionCall", "functionArgs", "functionArg", 
		"datasetOp", "jsonResponse", "jsonPairs", "jsonPair", "jsonValue", "jsonArray", 
		"jsonObject", "langRef",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'unistack'", "'app'", "'version'", "'decorators'", "':'", 
		"'@'", "'='", "'style'", "'imports'", "'as'", "'config'", "'html-ui'", 
		"'{if'", "'{else}'", "'{end}'", "'=='", "'!='", "'<'", "'>'", "'css'", 
		"'py'", "'def'", "'['", "']'", "'|'", "'Optional'", "'->'", "'js'", "'function'", 
		"'async'", "'routes'", "'GET'", "'POST'", "'PUT'", "'DELETE'", "'PATCH'", 
		"'OPTIONS'", "'HEAD'", "'catch'", "'DataSet'", "'.'", "'json'", "'error'", 
		"'null'", undefined, undefined, undefined, undefined, undefined, undefined, 
		"'{'", "'}'", "'('", "')'", "','", "';'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "NULL", "STRING", "VERSION", "NUMBER", "BOOLEAN", 
		"IDENT", "DIGIT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COMMA", "SEMI", 
		"HTML_TEXT", "CSS_TEXT", "PY_TEXT", "JS_TEXT", "ERROR_TEXT", "STYLE_TEXT", 
		"WHITESPACE", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(UniStackParser._LITERAL_NAMES, UniStackParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return UniStackParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "UniStack.g4"; }

	// @Override
	public get ruleNames(): string[] { return UniStackParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return UniStackParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(UniStackParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, UniStackParser.RULE_file);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this.match(UniStackParser.T__0);
			this.state = 127;
			this.match(UniStackParser.T__1);
			this.state = 128;
			this.match(UniStackParser.STRING);
			this.state = 129;
			this.match(UniStackParser.T__2);
			this.state = 130;
			this.match(UniStackParser.VERSION);
			this.state = 131;
			this.match(UniStackParser.LBRACE);
			this.state = 132;
			this.fileBody();
			this.state = 133;
			this.match(UniStackParser.RBRACE);
			this.state = 134;
			this.match(UniStackParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fileBody(): FileBodyContext {
		let _localctx: FileBodyContext = new FileBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, UniStackParser.RULE_fileBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << UniStackParser.T__3) | (1 << UniStackParser.T__7) | (1 << UniStackParser.T__8) | (1 << UniStackParser.T__10) | (1 << UniStackParser.T__11) | (1 << UniStackParser.T__19) | (1 << UniStackParser.T__20) | (1 << UniStackParser.T__27) | (1 << UniStackParser.T__30))) !== 0)) {
				{
				{
				this.state = 136;
				this.fileSection();
				}
				}
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fileSection(): FileSectionContext {
		let _localctx: FileSectionContext = new FileSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, UniStackParser.RULE_fileSection);
		try {
			this.state = 151;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case UniStackParser.T__8:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 142;
				this.importsSection();
				}
				break;
			case UniStackParser.T__10:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 143;
				this.configSection();
				}
				break;
			case UniStackParser.T__11:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 144;
				this.htmlSection();
				}
				break;
			case UniStackParser.T__19:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 145;
				this.cssSection();
				}
				break;
			case UniStackParser.T__7:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 146;
				this.styleSection();
				}
				break;
			case UniStackParser.T__3:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 147;
				this.decoratorSection();
				}
				break;
			case UniStackParser.T__20:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 148;
				this.pySection();
				}
				break;
			case UniStackParser.T__27:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 149;
				this.jsSection();
				}
				break;
			case UniStackParser.T__30:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 150;
				this.routesSection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decoratorSection(): DecoratorSectionContext {
		let _localctx: DecoratorSectionContext = new DecoratorSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, UniStackParser.RULE_decoratorSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.match(UniStackParser.T__3);
			this.state = 154;
			this.match(UniStackParser.T__4);
			this.state = 155;
			this.decoratorList();
			this.state = 156;
			this.match(UniStackParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decoratorList(): DecoratorListContext {
		let _localctx: DecoratorListContext = new DecoratorListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, UniStackParser.RULE_decoratorList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
			this.decorator();
			this.state = 163;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === UniStackParser.COMMA) {
				{
				{
				this.state = 159;
				this.match(UniStackParser.COMMA);
				this.state = 160;
				this.decorator();
				}
				}
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decorator(): DecoratorContext {
		let _localctx: DecoratorContext = new DecoratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, UniStackParser.RULE_decorator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.match(UniStackParser.T__5);
			this.state = 167;
			this.match(UniStackParser.IDENT);
			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === UniStackParser.LPAREN) {
				{
				this.state = 168;
				this.decoratorArgs();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decoratorArgs(): DecoratorArgsContext {
		let _localctx: DecoratorArgsContext = new DecoratorArgsContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, UniStackParser.RULE_decoratorArgs);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 171;
			this.match(UniStackParser.LPAREN);
			this.state = 172;
			this.decoratorArg();
			this.state = 177;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === UniStackParser.COMMA) {
				{
				{
				this.state = 173;
				this.match(UniStackParser.COMMA);
				this.state = 174;
				this.decoratorArg();
				}
				}
				this.state = 179;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 180;
			this.match(UniStackParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decoratorArg(): DecoratorArgContext {
		let _localctx: DecoratorArgContext = new DecoratorArgContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, UniStackParser.RULE_decoratorArg);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this.match(UniStackParser.IDENT);
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === UniStackParser.T__6) {
				{
				this.state = 183;
				this.match(UniStackParser.T__6);
				this.state = 184;
				this.decoratorValue();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decoratorValue(): DecoratorValueContext {
		let _localctx: DecoratorValueContext = new DecoratorValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, UniStackParser.RULE_decoratorValue);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			_la = this._input.LA(1);
			if (!(((((_la - 45)) & ~0x1F) === 0 && ((1 << (_la - 45)) & ((1 << (UniStackParser.STRING - 45)) | (1 << (UniStackParser.NUMBER - 45)) | (1 << (UniStackParser.BOOLEAN - 45)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public styleSection(): StyleSectionContext {
		let _localctx: StyleSectionContext = new StyleSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, UniStackParser.RULE_styleSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			this.match(UniStackParser.T__7);
			this.state = 190;
			this.match(UniStackParser.T__4);
			this.state = 192;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 191;
				this.styleLine();
				}
				}
				this.state = 194;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === UniStackParser.STYLE_TEXT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public styleLine(): StyleLineContext {
		let _localctx: StyleLineContext = new StyleLineContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, UniStackParser.RULE_styleLine);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 196;
			this.match(UniStackParser.STYLE_TEXT);
			this.state = 197;
			this.match(UniStackParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importsSection(): ImportsSectionContext {
		let _localctx: ImportsSectionContext = new ImportsSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, UniStackParser.RULE_importsSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 199;
			this.match(UniStackParser.T__8);
			this.state = 200;
			this.match(UniStackParser.T__4);
			this.state = 201;
			this.importList();
			this.state = 202;
			this.match(UniStackParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importList(): ImportListContext {
		let _localctx: ImportListContext = new ImportListContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, UniStackParser.RULE_importList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 204;
			this.importItem();
			this.state = 209;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === UniStackParser.COMMA) {
				{
				{
				this.state = 205;
				this.match(UniStackParser.COMMA);
				this.state = 206;
				this.importItem();
				}
				}
				this.state = 211;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importItem(): ImportItemContext {
		let _localctx: ImportItemContext = new ImportItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, UniStackParser.RULE_importItem);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 212;
			this.match(UniStackParser.STRING);
			this.state = 214;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === UniStackParser.T__9) {
				{
				this.state = 213;
				this.importAlias();
				}
			}
